WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
273503
[WebGPU] CommandEncoder::beginRenderPass can fail metal validation for destroyed textures
https://bugs.webkit.org/show_bug.cgi?id=273503
Summary
[WebGPU] CommandEncoder::beginRenderPass can fail metal validation for destro...
Mike Wyrzykowski
Reported
2024-04-30 10:38:37 PDT
[WebGPU] RenderBundleEncoder::endCurrentICB can fail metal validation with invalid usage
Attachments
Add attachment
proposed patch, testcase, etc.
Mike Wyrzykowski
Comment 1
2024-04-30 10:38:48 PDT
radar://127229769
Mike Wyrzykowski
Comment 2
2024-05-01 13:58:49 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/28003
EWS
Comment 3
2024-05-03 14:54:49 PDT
Committed
278346@main
(1c194cc6e82c): <
https://commits.webkit.org/278346@main
> Reviewed commits have been landed. Closing PR #28003 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug