[WebGPU] CommandEncoder::beginRenderPass can fail metal validation for destroyed textures https://bugs.webkit.org/show_bug.cgi?id=273503 <radar://127229769>

Reviewed by Dan Glastonbury.

Destroyed textures have one mip level and one slice.

* LayoutTests/TestExpectations:
* LayoutTests/fast/webgpu/fuzz-273503-expected.txt: Added.
* LayoutTests/fast/webgpu/fuzz-273503.html: Added.
Add regression test.

* Source/WebGPU/WebGPU/CommandEncoder.mm:
(WebGPU::CommandEncoder::beginRenderPass):

Canonical link: https://commits.webkit.org/278346@main